tests/typechecker/should_fail/module_instances_4.csp
module M(_)
exports
    y = X
endmodule

instance M1 = M({1})

X = M1::y
